--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+.body {
+  background-color: #222433;
+}
+
+.contact-form {
+  margin-top: 10px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+}
+
+
+
 /* Style inputs with type="text", select elements and textareas */
 input[type=text], select, textarea {
     width: 100%; /* Full width */
@@ -24,7 +36,7 @@ input[type=email], select, textarea {
   
   /* Style the submit button with a specific background color etc */
   input[type=submit] {
-    background-color: #04AA6D;
+    background-color: #313356;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -34,7 +46,7 @@ input[type=email], select, textarea {
   
   /* When moving the mouse over the submit button, add a darker green color */
   input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #54578d;
   }
   
   /* Add a background color and some padding around the form */
