--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 .body {
   background-color: #222433;
+  overflow-x: hidden;
 }
 
-.contact-form {
-  margin-top: 10px;
-  font-family: 'Roboto', sans-serif;
+
+#contact-form {
+  margin-bottom: 15px;
   font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 100px;
 }
-
 
 
 /* Style inputs with type="text", select elements and textareas */
@@ -50,28 +52,13 @@ input[type=submit]:hover {
 }
 
 /* Add a background color and some padding around the form */
-.container {
+.container2 {
   border-radius: 5px;
   background-color: #f2f2f2;
-  padding: 20px;
+  padding: 30px;
+  margin-top: 30px;
 }
 
-  /* Add a black background color to the top navigation */
-.topnav {
-  background-color: #18191F;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
 
 /* Change the color of links on hover */
 .topnav a:hover {
@@ -85,38 +72,251 @@ input[type=submit]:hover {
   color: white;
 }
 
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+
+/* header   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1); */
+
+.header {
+  position: fixed;
+  width: 80%;
+  z-index: 3;
+  padding: 20px 0;
+}
+
+.header ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+}
+
+.header li a {
+  display: block;
+  padding: 20px 20px 4px 20px;
+  text-decoration: none;
+}
+
+.header .logo {
+  color: white;
+  display: block;
+  float: left;
+  font-size: 1.4em;
+  padding: 0px 0px;
+  text-decoration: none;
+}
+
+/* menu */
+
+.header .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
+}
+
+/* menu icon */
+
+.header .menu-icon {
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  padding: 15px 15px;
+  position: relative;
+  user-select: none;
+}
+
+.header .menu-icon .navicon {
+  background: white;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 18px;
+}
+
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+  background: white;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+}
+
+.header .menu-icon .navicon:before {
+  top: 5px;
+}
+
+.header .menu-icon .navicon:after {
+  top: -5px;
+}
+
+/* menu btn */
+.header .menu-btn {
   display: none;
 }
 
-.topnav-right {
-  float: right;
+.header .menu-btn:checked ~ .menu {
+  max-height: 240px;
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-  .topnav a:not(:only-child) {display: none;}
-  #home-button {
+.header .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
+/* section */
+
+.section {
+  overflow: hidden;
+  margin: auto;
+  max-width: 1400px;
+}
+
+.section a {
+  position: relative;
+  float: left;
+  width: 100%;
+}
+
+.section a img {
+  width: 100%;
+  display: block;
+}
+
+.section a span {
+  color: #fff;
+  position: absolute;
+  font-size: 2em;
+  text-shadow: 1px 1px 0 #000;
+}
+
+.section-split a span {
+  display: none;
+}
+
+.section-split a:hover span {
+  display: block;
+}
+
+/* 48em = 768px */
+
+@media (min-width: 875px) {
+  .header li {
+    float: left;
+  }
+  .header li a {
+    padding: 0px 0px 0px 0px;
+    margin-left: 30px;
+  }
+  .header .menu {
+    clear: none;
+    float: right;
+    max-height: none;
+  }
+  .header .menu-icon {
     display: none;
   }
-  .topnav a.icon {
-    float: right;
-    display: block;
+
+  /* - link under - */
+
+.link-arrow:after {
+    content: '';
+    background-size: 100% 100%;
+    width: 16px;
+    height: 12px;
+    position: absolute;
+    top: 5px;
+    right: -28px;
+    -webkit-transition: all .4s cubic-bezier(.35, 1, .33, 1);
+    transition: all .4s cubic-bezier(.35, 1, .33, 1)
+  }
+  
+  .link-arrow:hover:after {
+    right: -35px
+  }
+  
+  .link-arrow.link-arrow-white:after {
+    background-size: 100% 100%
+  }
+  
+  .link-arrow-hover:after {
+    right: -35px
+  }
+  
+  .link {
+    display: inline-block;
+    position: relative;
+    border: none;
+    padding-bottom: 4px;
+    font-weight: 400;
+    font-size: 1.15em
+  }
+  
+  .link:active,
+  .link:focus,
+  .link:hover {
+    outline: 0
+  }
+  
+  .link:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: #000;
+    width: 0;
+    height: 2px;
+    -webkit-transition: all .4s cubic-bezier(.35, 1, .33, 1);
+    transition: all .4s cubic-bezier(.35, 1, .33, 1)
+  }
+  
+  .link:hover {
+    color: white;
+  }
+  
+  .link:hover:before {
+    width: 100%
+  }
+  
+  .link-theme:before {
+    background: #c36dce
   }
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
+/* 48em = 768px */
+
+@media (min-width: 48em) {
+  .section-split a {
+    width: 50%;
   }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+}
+
+.background-nav {
+  background-color: #18191F;
+}
+
+.full-width-div {
+  position: absolute;
+  width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
