--- a/css/style.css
+++ b/css/style.css
@@ -494,3 +494,30 @@ img {
 }
 
 /* End of styling indiv car page */
+
+/* Start of styling fleet images */
+
+.fleet {
+  margin-top: 100px;
+}
+
+.fleet-text {
+  margin-top: 10px;
+  text-align: center;
+  color: white;
+  font-size: 1.5em;
+  font-weight: 500;
+}
+
+.fleet-text:hover {
+  color: #c197eb;
+}
+
+.car-box {
+  margin-bottom: 15px;
+}
+
+.rounded:hover {
+  opacity: 0.8;
+}
+/* End of styling fleet images */
