--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ a::after {
 
 .home-heading {
   color: white;
-  font-size: 7em;
+  font-size: 7.8em;
   font-weight: 600;
   position: relative;
   top: 50px;
@@ -419,6 +419,7 @@ a::after {
   font-size: 2em;
   color: white;
   justify-content: left; 
+  margin-top: 15px;
 }
 
 .footer {
@@ -590,5 +591,31 @@ img {
 @media (max-width: 875px) {
   .img-home {
     display: none;
+  }
+
+  .parallax-container {
+    display: flex;
+    min-height: 0vh;
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  
+    /*  this is where the magic happens:  */
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    row-gap: 4rem;
+    text-align: center;
+  }
+  
+  .parallax-container2 {
+    padding: 6rem 0;
+    background-image: url("../img/main-page-background-edited.jpg");
+    gap: 1.6em;
+    
+    width: 100%;
+    height: auto;
   }
 }
