--- a/css/style.css
+++ b/css/style.css
@@ -588,6 +588,20 @@ img {
   margin-top: 50px;
 }
 
+.home-heading-small {
+  color: white;
+  font-size: 6em;
+  font-weight: 600;
+  position: relative;
+  margin-bottom: -50px;
+}
+
+@media (min-width: 875px) {
+  .smaller-text {
+    display: none;
+  }
+}
+
 @media (max-width: 875px) {
   .img-home {
     display: none;
@@ -618,4 +632,16 @@ img {
     width: 100%;
     height: auto;
   }
+
+  .home-subtext {
+    font-size: 2em;
+    color: white;
+    justify-content: left; 
+    margin-top: 35px;
+  }
+
+  .bigger-text {
+    display: none;
+  }
+
 }
